--- a/qt-creator/lab03/main-window.ui
+++ b/qt-creator/lab03/main-window.ui
@@ -6,72 +6,85 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>474</width>
+    <height>311</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
-  <widget class="QWidget" name="centralWidget"/>
+  <widget class="QWidget" name="centralWidget">
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <property name="leftMargin">
+     <number>0</number>
+    </property>
+    <property name="topMargin">
+     <number>0</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
+    </property>
+    <property name="bottomMargin">
+     <number>0</number>
+    </property>
+    <item>
+     <widget class="QMdiArea" name="mdiArea"/>
+    </item>
+   </layout>
+  </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>400</width>
+     <width>474</width>
      <height>22</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menu">
+   <widget class="QMenu" name="fileMenu">
     <property name="title">
      <string>Файл</string>
     </property>
-    <addaction name="action"/>
+    <addaction name="openFileAction"/>
     <addaction name="separator"/>
-    <addaction name="action_3"/>
+    <addaction name="quitAction"/>
    </widget>
-   <widget class="QMenu" name="menu_2">
+   <widget class="QMenu" name="windowsMenu">
     <property name="title">
      <string>Окна</string>
     </property>
-    <addaction name="action_4"/>
+    <addaction name="closeAllWindowsAction"/>
    </widget>
-   <widget class="QMenu" name="menu_3">
+   <widget class="QMenu" name="helpMenu">
     <property name="title">
      <string>Справка</string>
     </property>
-    <addaction name="action_5"/>
+    <addaction name="showAboutAction"/>
    </widget>
-   <addaction name="menu"/>
-   <addaction name="menu_2"/>
-   <addaction name="menu_3"/>
-  </widget>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
+   <addaction name="fileMenu"/>
+   <addaction name="windowsMenu"/>
+   <addaction name="helpMenu"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
-  <action name="action">
+  <action name="openFileAction">
    <property name="text">
     <string>Открыть</string>
    </property>
   </action>
-  <action name="action_3">
+  <action name="quitAction">
    <property name="text">
     <string>Выход</string>
    </property>
   </action>
-  <action name="action_4">
+  <action name="closeAllWindowsAction">
    <property name="text">
     <string>Закрыть все окна</string>
    </property>
+   <property name="toolTip">
+    <string>Закрыть все окна</string>
+   </property>
   </action>
-  <action name="action_5">
+  <action name="showAboutAction">
    <property name="text">
     <string>О программе</string>
    </property>
@@ -79,5 +92,22 @@
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>quitAction</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>199</x>
+     <y>149</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
