--- a/qt-creator/lab03/mainwindow.ui
+++ b/qt-creator/lab03/mainwindow.ui
@@ -73,7 +73,7 @@
   </action>
   <action name="quitAction">
    <property name="text">
-    <string>Выход</string>
+    <string>Завершить</string>
    </property>
   </action>
   <action name="closeAllWindowsAction">
@@ -86,7 +86,12 @@
   </action>
   <action name="showAboutAction">
    <property name="text">
-    <string>О программе</string>
+    <string>Информация</string>
+   </property>
+  </action>
+  <action name="action">
+   <property name="text">
+    <string>&amp;Пункт а</string>
    </property>
   </action>
  </widget>
