--- a/qt-creator/lab04/mainwindow.ui
+++ b/qt-creator/lab04/mainwindow.ui
@@ -14,7 +14,7 @@
    <string/>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <layout class="QHBoxLayout" name="horizontalLayout">
+   <layout class="QHBoxLayout" name="horizontalLayout_2">
     <property name="leftMargin">
      <number>12</number>
     </property>
@@ -29,10 +29,16 @@
     </property>
     <item>
      <widget class="QGroupBox" name="groupBox">
+      <property name="maximumSize">
+       <size>
+        <width>100</width>
+        <height>16777215</height>
+       </size>
+      </property>
       <property name="title">
        <string>Фильтры</string>
       </property>
-      <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <layout class="QHBoxLayout" name="horizontalLayout">
        <item alignment="Qt::AlignTop">
         <widget class="QPushButton" name="pushButton">
          <property name="text">
@@ -42,9 +48,6 @@
        </item>
       </layout>
      </widget>
-    </item>
-    <item>
-     <widget class="QGraphicsView" name="graphicsView"/>
     </item>
    </layout>
   </widget>
