Добавил функцию перевода из системы в систему.

--- a/qt-creator/lab04/mainwindow.ui
+++ b/qt-creator/lab04/mainwindow.ui
@@ -49,6 +49,23 @@
       </layout>
      </widget>
     </item>
+    <item>
+     <widget class="QScrollArea" name="scrollArea">
+      <property name="widgetResizable">
+       <bool>true</bool>
+      </property>
+      <widget class="QWidget" name="scrollAreaWidgetContents">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>0</y>
+         <width>262</width>
+         <height>249</height>
+        </rect>
+       </property>
+      </widget>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
