--- a/qt-creator/lab04/mainwindow.ui
+++ b/qt-creator/lab04/mainwindow.ui
@@ -28,21 +28,40 @@
      <number>12</number>
     </property>
     <item>
-     <widget class="QGroupBox" name="groupBox">
-      <property name="maximumSize">
+     <widget class="QWidget" name="widget" native="true">
+      <property name="minimumSize">
        <size>
-        <width>100</width>
-        <height>16777215</height>
+        <width>0</width>
+        <height>0</height>
        </size>
       </property>
-      <property name="title">
-       <string>Фильтры</string>
-      </property>
-      <layout class="QHBoxLayout" name="horizontalLayout">
-       <item alignment="Qt::AlignTop">
-        <widget class="QPushButton" name="pushButton">
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QGroupBox" name="groupBox">
+         <property name="maximumSize">
+          <size>
+           <width>16777215</width>
+           <height>16777215</height>
+          </size>
+         </property>
+         <property name="title">
+          <string>Фильтры</string>
+         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout">
+          <item alignment="Qt::AlignTop">
+           <widget class="QPushButton" name="pushButton">
+            <property name="text">
+             <string>Schar</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton_2">
          <property name="text">
-          <string>Schar</string>
+          <string>Cancel</string>
          </property>
         </widget>
        </item>
@@ -59,10 +78,11 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>262</width>
-         <height>249</height>
+         <width>244</width>
+         <height>252</height>
         </rect>
        </property>
+       <zorder>groupBox</zorder>
       </widget>
      </widget>
     </item>
